<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myownbadself.assignment10final.CloudDetailActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
      
        <TextView
            android:id="@+id/textview_sighting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
       
        <EditText
            android:id="@+id/edittext_sighting_desc"
	        style="@style/base_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sighting_desc_hint" />
        
       <TextView
            android:id="@+id/textview_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetching_conditions" />
       

        <Button
            android:id="@+id/button_launch_camera"
	        android:background="@color/med_grey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/change_cloud_image" />

        <ImageView
            android:id="@+id/imageview_cloud_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cloud_image" />       
            


        <ImageView
            android:id="@+id/imageview_wunderground_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:src="@drawable/wunderground_logo"
            android:contentDescription="@string/wunderground" />    
            
        <TextView
            android:id="@+id/textview_wunderground_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wunderground" />   
                    
    </LinearLayout>

</ScrollView>